# JuicyLoris

./: CMakeLists.txt  README.md  clarinet.aiff  flute.aiff  main.cpp
Source/: AiffData.cpp  AiffData.h  AiffFile.cpp  Analyzer.cpp  Analyzer.h  AssociateBandwidth.cpp  AssociateBandwidth.h  BigEndian.cpp  BigEndian.h  Breakpoint.cpp  Breakpoint.h  BreakpointUtils.h  CMakeLists.txt  Channelizer.cpp  Collator.cpp  Dilator.cpp  Distiller.cpp  Envelope.h  F0Estimate.cpp  Filter.cpp  Filter.h  FourierTransform.cpp  Fundamental.cpp  Fundamental.h  Marker.h  Oscillator.cpp  Partial.cpp  PartialUtils.h  ReassignedSpectrum.cpp  ReassignedSpectrum.h  SdifFile.cpp  Sieve.cpp  SpectralPeakSelector.cpp  SpectralPeakSelector.h  Synthesizer.cpp  Synthesizer.h  config.h  loris.h  lorisAnalyzer_pi.cpp  lorisBpEnvelope_pi.cpp  (+5 more)
